deployment/example-workload/ingressroute/01-ingress-to-ingressroute/name-based.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: name-example-foo
  namespace: default
spec: 
  virtualhost:
    fqdn: foo1.bar.com
  routes: 
    - match: /
      services: 
        - name: s1
          port: 80

---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: name-example-bar
  namespace: default
spec: 
  virtualhost:
    fqdn: bar1.foo.com
  routes: 
    - match: /
      services: 
        - name: s2
          port: 80

# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: name-example
# spec:
#   rules:
#   - host: foo1.bar.com
#     http:
#       paths:
#       - backend:
#           serviceName: s1
#           servicePort: 80
#   - host: bar1.foo.com
#     http:
#       paths:
#       - backend:
#           serviceName: s2
#           servicePort: 80
